logs/spiffgtkwidgets.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SpiffGtkWidgets'...
Listing './lib/python3.5/site-packages/SpiffGtkWidgets/Calendar'...
Compiling './lib/python3.5/site-packages/SpiffGtkWidgets/Calendar/CanvasMagnetTable.py'...
***   File "./lib/python3.5/site-packages/SpiffGtkWidgets/Calendar/CanvasMagnetTable.py", line 56
    raise AttributeError, 'unknown property %s' % property.name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpiffGtkWidgets/Calendar/CanvasRectangle.py'...
***   File "./lib/python3.5/site-packages/SpiffGtkWidgets/Calendar/CanvasRectangle.py", line 74
    raise AttributeError, 'unknown property %s' % property.name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpiffGtkWidgets/Calendar/Matrix.py'...
***   File "./lib/python3.5/site-packages/SpiffGtkWidgets/Calendar/Matrix.py", line 234
    print "None",
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SpiffGtkWidgets/TextEditor'...
Listing './lib/python3.5/site-packages/SpiffGtkWidgets/TextEditor/Features'...
Compiling './lib/python3.5/site-packages/SpiffGtkWidgets/TextEditor/Features/Feature.py'...
***   File "./lib/python3.5/site-packages/SpiffGtkWidgets/TextEditor/Features/Feature.py", line 33
    print "RANGE:", repr(self.buffer.get_text(start, end))
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpiffGtkWidgets/TextEditor/Layout.py'...
***   File "./lib/python3.5/site-packages/SpiffGtkWidgets/TextEditor/Layout.py", line 80
    print "%s: Box %d (h%d) with pull %d is at %d" % values
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpiffGtkWidgets/color.py'...
***   File "./lib/python3.5/site-packages/SpiffGtkWidgets/color.py", line 60
    elif type(color) == type(0) or type(color) == type(0l):
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/SpiffGtkWidgets-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
